# open-rppg

./: .gitignore  README.md  api.html  genindex.html  index.html  intro.html  pyproject.toml  search.html
rppg/: Oliver_test.py  __init__.py  main.py  models.py  test_rppg.py
rppg/models_code/: FacePhys.py
rppg/weights/: FacePhys.rlap.weights.h5
